instance1/temp-retrieve/objects/Fulfillment__c/fields/Accession_ID__c.field-meta.xml
<CustomField>
    <fullName>Accession_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Accession ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>