instance1/temp-retrieve/objects/Fulfillment__c/fields/Fulfiller__c.field-meta.xml
<CustomField>
    <fullName>Fulfiller__c</fullName>
    <label>Fulfiller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lacore</fullName>
            </value>
            <value>
                <fullName>Davinci</fullName>
            </value>
            <value>
                <fullName>Wells</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>EmpowerDX</fullName>
            </value>
            <value>
                <fullName>CellScience</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
                <isActive>false</isActive>
                <label>CSS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>