instance1/temp-retrieve/objects/Fulfillment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Fulfillment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>