instance1/temp-retrieve/objects/Fulfillment__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>Fulfillment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>