instance1/temp-retrieve/objects/Fulfillment__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Order Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>