instance1/temp-retrieve/objects/Fulfillment__c/fields/Order_Salesforce_One__c.field-meta.xml
<CustomField>
    <fullName>Order_Salesforce_One__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order (Salesforce One)</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Fulfillment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>