instance1/temp-retrieve/objects/Fulfillment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Fedex</fullName>
            </value>
            <value>
                <fullName>2Day UPS</fullName>
            </value>
            <value>
                <fullName>2DayAir UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>