instance1/temp-retrieve/objects/Fulfillment__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Unique Id that we send the lab provider to track shipment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RequestId</label>
    <length>75</length>
    <type>Text</type>
</CustomField>