instance1/temp-retrieve/objects/Fulfillment__c/fields/Split_Fulfillment_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Split_Fulfillment_Parent_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Fulfillment Parent ID</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipName>Fulfillment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>