instance1/temp-retrieve/objects/Fulfillment__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>