instance1/temp-retrieve/objects/Fulfillment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genetic Test</fullName>
            </value>
            <value>
                <fullName>SHP</fullName>
            </value>
            <value>
                <fullName>Supplements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>